ompi/mpi/f03/mpi.f03


integer(C_INT) function &
MPI_Comm_size(comm, size, ierr) &
  BIND(C, name="MPI_Comm_size")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(out) :: size
end function MPI_Comm_size

end interface MPI_Comm_size


interface MPI_Comm_spawn

integer(C_INT) function &
MPI_Comm_spawn(command, argv, maxprocs, info, root, comm, intercomm, &
        array_of_errcodes, ierr) &
  BIND(C, name="MPI_Comm_spawn")
  use MPI_C_BINDING
  character(len=*), value, intent(in) :: command
  character(len=*), dimension(*), value, intent(in) :: argv
  integer(INT_C), value, intent(in) :: maxprocs
  integer(MPI_HANDLE_KIND), value, intent(in) :: info
  integer(INT_C), value, intent(in) :: root
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: intercomm
  integer(INT_C), dimension(*), value, intent(out) :: array_of_errcodes
end function MPI_Comm_spawn

end interface MPI_Comm_spawn


interface MPI_Comm_spawn_multiple

integer(C_INT) function &
MPI_Comm_spawn_multiple(count, array_of_commands, array_of_argv, array_of_maxprocs, array_of_info, root, comm, &
        intercomm, array_of_errcodes, ierr) &
  BIND(C, name="MPI_Comm_spawn_multiple")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: count
  character(len=*), dimension(*), value, intent(in) :: array_of_commands
  character(len=*), dimension(count,*), value, intent(in) :: array_of_argv
  integer(INT_C), dimension(*), value, intent(in) :: array_of_maxprocs
  integer(MPI_HANDLE_KIND), dimension(*), value, intent(in) :: array_of_info
  integer(INT_C), value, intent(in) :: root
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: intercomm
  integer(INT_C), dimension(*), value, intent(out) :: array_of_errcodes
end function MPI_Comm_spawn_multiple

end interface MPI_Comm_spawn_multiple


interface MPI_Comm_split

integer(C_INT) function &
MPI_Comm_split(comm, color, key, newcomm, ierr) &
  BIND(C, name="MPI_Comm_split")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(in) :: color
  integer(INT_C), value, intent(in) :: key
  integer(MPI_HANDLE_KIND), value, intent(out) :: newcomm
end function MPI_Comm_split

end interface MPI_Comm_split


interface MPI_Comm_test_inter

integer(C_INT) function &
MPI_Comm_test_inter(comm, flag, ierr) &
  BIND(C, name="MPI_Comm_test_inter")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: comm
  integer, value, intent(in) :: flag
end function MPI_Comm_test_inter

end interface MPI_Comm_test_inter


interface MPI_Dims_create

integer(C_INT) function &
MPI_Dims_create(nnodes, ndims, dims, ierr) &
  BIND(C, name="MPI_Dims_create")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: nnodes
  integer(INT_C), value, intent(in) :: ndims
  integer(INT_C), dimension(*), value, intent(inout) :: dims
end function MPI_Dims_create

end interface MPI_Dims_create


interface MPI_Errhandler_create

integer(C_INT) function &
MPI_Errhandler_create(function, errhandler, ierr) &
  BIND(C, name="MPI_Errhandler_create")
  use MPI_C_BINDING
  external :: function
  integer(MPI_HANDLE_KIND), value, intent(out) :: errhandler
end function MPI_Errhandler_create

end interface MPI_Errhandler_create


interface MPI_Errhandler_free

integer(C_INT) function &
MPI_Errhandler_free(errhandler, ierr) &
  BIND(C, name="MPI_Errhandler_free")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: errhandler
end function MPI_Errhandler_free

end interface MPI_Errhandler_free


interface MPI_Errhandler_get

integer(C_INT) function &
MPI_Errhandler_get(comm, errhandler, ierr) &
  BIND(C, name="MPI_Errhandler_get")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: errhandler
end function MPI_Errhandler_get

end interface MPI_Errhandler_get


interface MPI_Errhandler_set

integer(C_INT) function &
MPI_Errhandler_set(comm, errhandler, ierr) &
  BIND(C, name="MPI_Errhandler_set")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(in) :: errhandler
end function MPI_Errhandler_set

end interface MPI_Errhandler_set


interface MPI_Error_class

integer(C_INT) function &
MPI_Error_class(errorcode, errorclass, ierr) &
  BIND(C, name="MPI_Error_class")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: errorcode
  integer(INT_C), value, intent(out) :: errorclass
end function MPI_Error_class

end interface MPI_Error_class


interface MPI_Error_string

integer(C_INT) function &
MPI_Error_string(errorcode, string, resultlen, ierr) &
  BIND(C, name="MPI_Error_string")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: errorcode
  character(len=*), value, intent(out) :: string
  integer(INT_C), value, intent(out) :: resultlen
end function MPI_Error_string

end interface MPI_Error_string


interface MPI_Exscan

integer(C_INT) function &
MPI_Exscan(sendbuf, recvbuf, count,
           datatype, op, comm, ierr) &
  BIND(C, name="MPI_Exscan")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: sendbuf
  type(C_PTR), value, intent(out) :: recvbuf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_HANDLE_KIND), value, intent(in) :: op
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Exscan

end interface MPI_Exscan


interface MPI_File_call_errhandler

integer(C_INT) function &
MPI_File_call_errhandler(fh, errorcode, ierr) &
  BIND(C, name="MPI_File_call_errhandler")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  integer(INT_C), value, intent(in) :: errorcode
end function MPI_File_call_errhandler

end interface MPI_File_call_errhandler


interface MPI_File_close

integer(C_INT) function &
MPI_File_close(fh, ierr) &
  BIND(C, name="MPI_File_close")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
end function MPI_File_close

end interface MPI_File_close


interface MPI_File_create_errhandler

integer(C_INT) function &
MPI_File_create_errhandler(function, errhandler, ierr) &
  BIND(C, name="MPI_File_create_errhandler")
  use MPI_C_BINDING
  external :: function
  integer(MPI_HANDLE_KIND), value, intent(out) :: errhandler
end function MPI_File_create_errhandler

end interface MPI_File_create_errhandler


interface MPI_File_delete

integer(C_INT) function &
MPI_File_delete(filename, info, ierr) &
  BIND(C, name="MPI_File_delete")
  use MPI_C_BINDING
  character(len=*), value, intent(in) :: filename
  integer(MPI_HANDLE_KIND), value, intent(in) :: info
end function MPI_File_delete

end interface MPI_File_delete


interface MPI_File_get_amode

integer(C_INT) function &
MPI_File_get_amode(fh, amode, ierr) &
  BIND(C, name="MPI_File_get_amode")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  integer(INT_C), value, intent(out) :: amode
end function MPI_File_get_amode

end interface MPI_File_get_amode


interface MPI_File_get_atomicity

integer(C_INT) function &
MPI_File_get_atomicity(fh, flag, ierr) &
  BIND(C, name="MPI_File_get_atomicity")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  integer, value, intent(out) :: flag
end function MPI_File_get_atomicity

end interface MPI_File_get_atomicity


interface MPI_File_get_byte_offset

integer(C_INT) function &
MPI_File_get_byte_offset(fh, offset, disp, ierr) &
  BIND(C, name="MPI_File_get_byte_offset")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(in) :: offset
  integer(kind=MPI_OFFSET_KIND), value, intent(out) :: disp
end function MPI_File_get_byte_offset

end interface MPI_File_get_byte_offset


interface MPI_File_get_errhandler

integer(C_INT) function &
MPI_File_get_errhandler(file, errhandler, ierr) &
  BIND(C, name="MPI_File_get_errhandler")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: file
  integer(MPI_HANDLE_KIND), value, intent(out) :: errhandler
end function MPI_File_get_errhandler

end interface MPI_File_get_errhandler


interface MPI_File_get_group

integer(C_INT) function &
MPI_File_get_group(fh, group, ierr) &
  BIND(C, name="MPI_File_get_group")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  integer(MPI_HANDLE_KIND), value, intent(out) :: group
end function MPI_File_get_group

end interface MPI_File_get_group


interface MPI_File_get_info

integer(C_INT) function &
MPI_File_get_info(fh, info_used, ierr) &
  BIND(C, name="MPI_File_get_info")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  integer(MPI_HANDLE_KIND), value, intent(out) :: info_used
end function MPI_File_get_info

end interface MPI_File_get_info


interface MPI_File_get_position

integer(C_INT) function &
MPI_File_get_position(fh, offset, ierr) &
  BIND(C, name="MPI_File_get_position")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(out) :: offset
end function MPI_File_get_position

end interface MPI_File_get_position


interface MPI_File_get_position_shared

integer(C_INT) function &
MPI_File_get_position_shared(fh, offset, ierr) &
  BIND(C, name="MPI_File_get_position_shared")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(out) :: offset
end function MPI_File_get_position_shared

end interface MPI_File_get_position_shared


interface MPI_File_get_size

integer(C_INT) function &
MPI_File_get_size(fh, size, ierr) &
  BIND(C, name="MPI_File_get_size")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(out) :: size
end function MPI_File_get_size

end interface MPI_File_get_size


interface MPI_File_get_type_extent

integer(C_INT) function &
MPI_File_get_type_extent(fh, datatype, extent, ierr) &
  BIND(C, name="MPI_File_get_type_extent")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(kind=MPI_ADDRESS_KIND), value, intent(out) :: extent
end function MPI_File_get_type_extent

end interface MPI_File_get_type_extent


interface MPI_File_get_view

integer(C_INT) function &
MPI_File_get_view(fh, disp, etype, filetype, datarep, ierr) &
  BIND(C, name="MPI_File_get_view")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(out) :: disp
  integer(MPI_HANDLE_KIND), value, intent(out) :: etype
  integer(MPI_HANDLE_KIND), value, intent(out) :: filetype
  character(len=*), value, intent(out) :: datarep
end function MPI_File_get_view

end interface MPI_File_get_view


interface MPI_File_iread

integer(C_INT) function &
MPI_File_iread(fh, buf, count, datatype, request, ierr) &
  BIND(C, name="MPI_File_iread")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(out) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_File_iread

end interface MPI_File_iread


interface MPI_File_iread_at

integer(C_INT) function &
MPI_File_iread_at(fh, offset, buf, count, datatype, request, ierr) &
  BIND(C, name="MPI_File_iread_at")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(in) :: offset
  type(C_PTR), value, intent(out) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_File_iread_at

end interface MPI_File_iread_at


interface MPI_File_iread_shared
